# Credits

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
src/: CMakeLists.txt
src/Example/: CMakeLists.txt
src/Example/src/: main.cpp  main.qml
tests/: CMakeLists.txt  tstMain.cpp
